<resources>
    <string name="app_name">食物轉盤</string>

    <!-- Main Activity -->
    <string name="RandFood">隨機食物</string>
    <string name="RandText">隨機轉盤</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <!-- Menu Activity -->
    <string name="Menu_Rend">隨機轉盤</string>
    <string name="Menu_Mod">新增食物</string>

    <!-- Mod Activity -->
    <string name="btn_addFood">新增</string>
    <string name="btn_modFood">修改</string>
    <string name="txt_addFood">新增食物</string>
    <string name="txt_rate">評價</string>
    <string name="confirm_del">是否修改紀錄</string>
    <string name="confirm_yes">是</string>
    <string name="confirm_no">否</string>

    <!-- Action Bar -->
    <string name="act_add">新增</string>
    <string name="act_del">刪除</string>
    <string name="act_mod">修改</string>

</resources>
