<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.meta.randfood.AddItemActivity">

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/ediTxt_addFood"
        android:hint="@string/txt_addFood"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/rb_add"
        android:layout_alignStart="@+id/rb_add"
        android:layout_alignRight="@+id/rb_add"
        android:layout_alignEnd="@+id/rb_add" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rb_add"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:stepSize="1"
        android:rating="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_addFood"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/ediTxt_addFood"
        android:layout_alignStart="@+id/ediTxt_addFood"
        android:layout_marginTop="63dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_rate"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:layout_below="@+id/ediTxt_addFood"
        android:layout_alignLeft="@+id/ediTxt_addFood"
        android:layout_alignStart="@+id/ediTxt_addFood"
        android:layout_marginTop="39dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/btn_addFood"
        android:id="@+id/btn_addFood"
        android:layout_marginTop="52dp"
        android:textSize="20dp"
        android:layout_below="@+id/rb_add"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/btn_modFood"
        android:id="@+id/btn_modFood"
        android:layout_marginTop="52dp"
        android:textSize="20dp"
        android:layout_below="@+id/rb_add"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />
</RelativeLayout>
